Updatng links and CSS starter

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navigation Bar at top -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Lili Begum</a>
+        <a class="navbar-brand" href="#container">Portfolio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -70,7 +70,7 @@
     <!-- Hero Jumbotron -->
     <!-- Featuring your picture, your name, and any other information you'd like to include -->
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+        <div class="container" id="container">
             <!-- <div class="media p-3">
                 <img src= "images/IMG_0805.JPG" alt="Picture of Lili" class="mr-3 mt-7 rounded-circle" style="width:100px;"> -->
             <!-- <div class="media-body">
@@ -260,8 +260,8 @@
                 <a href="https://github.com/LiliBear1" target="_blank">Github</a>
             </div>
         
-        <div class="col-12 col-md-4 border"> Here's another
-            <a href="https://www.youtube.com/watch?v=I3E9U3GDrmI&ab_channel=LarryMcDonough" target="_blank">Useful Link</a>
+        <div class="col-12 col-md-4 border"> Download my
+            <a href="https://www.youtube.com/watch?v=I3E9U3GDrmI&ab_channel=LarryMcDonough" target="_blank">CV</a>
         </div>
     </div>
     </footer>
