adding hover styles on buttons

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="container" id="skills">
             <div class="row">
                 <div class="border border-info col-12 col-md-3">
-                    <div class="text-right title-skills">
+                    <div class="text-right  title-skills">
                         Skills
                     </div>
                 </div>
@@ -225,17 +225,15 @@
                         <div class="card col-md-6">
 
                             <div class="card-body">
-                                <h5 class="card-title">About</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the
-                                    card's content.
+                                <!-- <h5 class="card-title">About</h5> -->
+                                <p class="card-text">Want to find out more
                                 </p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <a href="#" class="btn btn-primary">About me?</a>
                             </div>
                         </div>
                         <div class="card col-md-6">
                             <div class="card-body">
-                                <h5 class="card-title">Contact</h5>
+                                <!-- <h5 class="card-title">Contact</h5> -->
                                 <p class="card-text">Please use the buttons below to contact me.
                                 </p>
                                 <a href="mailto:email@email.com" class="btn btn-primary">Email Me</a>
