updating relative path for css stylesheet as was not showing on deployed page but believe this was a caching issue as the ./css path is fine on live server

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- CSS Bootstrap (4) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -37,7 +37,8 @@
                     <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">Contact Me</a> <!-- Not added an extra ref to contact as in same row -->
+                    <a class="nav-link" href="#about">Contact Me</a>
+                    <!-- Not added an extra ref to contact as in same row -->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#cv">CV</a>
@@ -119,7 +120,7 @@
                                 <h5 class="card-title">Main Project</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
-                                <a href="https://www.space.com/" class="btn btn-primary">Project 1</a> 
+                                <a href="https://www.space.com/" class="btn btn-primary">Project 1</a>
                                 <!--Placeholder link to demo it works, I plan to update this later to my work, same applies for the links below  -->
                             </div>
                         </div>
@@ -180,33 +181,33 @@
                 </div>
                 <div class="border border-dark col-12 col-md-9">
                     <!-- <div class="row"> -->
-                        <div class="card">
-                            <!-- <img class="card-img-top" src="https://picsum.photos/seed/piano/200/100"
+                    <div class="card">
+                        <!-- <img class="card-img-top" src="https://picsum.photos/seed/piano/200/100"
                                 alt="This picture will represent my skills"> -->
-                            <div class="card-body">
-                                <!-- <h5 class="card-title">Skills</h5> -->
-                                <!-- List out the skills you expect to learn from the bootcamp. -->
-                                <p class="card-text">In this bootcamp, I expect to gain skills in:
-                                    <ul>
-                                        <li>HTML / CSS / Git</li>
-                                        <li>UX Design</li>
-                                        <li>JavaScript</li>
-                                        <li>Bootstrap</li>
-                                        <li>APIs</li>
-                                        <li>The Document Object Model</li>
-                                        <li>JQuery</li>
-                                        <li>JSON</li>
-                                        <li>AJAX</li>
-                                        <li>Node.js</li>
+                        <div class="card-body">
+                            <!-- <h5 class="card-title">Skills</h5> -->
+                            <!-- List out the skills you expect to learn from the bootcamp. -->
+                            <p class="card-text">In this bootcamp, I expect to gain skills in:
+                            <ul>
+                                <li>HTML / CSS / Git</li>
+                                <li>UX Design</li>
+                                <li>JavaScript</li>
+                                <li>Bootstrap</li>
+                                <li>APIs</li>
+                                <li>The Document Object Model</li>
+                                <li>JQuery</li>
+                                <li>JSON</li>
+                                <li>AJAX</li>
+                                <li>Node.js</li>
 
-                                    </ul>
-                                </p>
-                                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                            </div>
+                            </ul>
+                            </p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -251,17 +252,17 @@
     <!-- All buttons should display a box shadow upon hover -->
     <footer class="border border-dark" style="height: 2em;">
         <div class="row">
-            <div class="col-12 col-md-4 border"> Connect with me on 
+            <div class="col-12 col-md-4 border"> Connect with me on
                 <a href="https://www.linkedin.com/in/lilij" target="_blank">Linkedin</a>
             </div>
             <div class="col-12 col-md-4 border"> Check out my
                 <a href="https://github.com/LiliBear1" target="_blank">Github</a>
             </div>
-        
-        <div class="col-12 col-md-4 border"> Download my
-            <a href="https://www.youtube.com/watch?v=I3E9U3GDrmI&ab_channel=LarryMcDonough" target="_blank">CV</a>
+
+            <div class="col-12 col-md-4 border"> Download my
+                <a href="https://www.youtube.com/watch?v=I3E9U3GDrmI&ab_channel=LarryMcDonough" target="_blank">CV</a>
+            </div>
         </div>
-    </div>
     </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -278,4 +279,3 @@
 </body>
 
 </html>
-
