adding CV to demonstrate download option

--- a/index.html
+++ b/index.html
@@ -80,20 +80,13 @@
             </div> -->
             <div class="row">
                 <div class="media p-3">
-                    <img src="../Bootstrap-Portfolio/images/Lili.JPG" alt="Picture of Lili" class="mr-3 mt-7"
+                    <img src="./images/Lili.JPG" alt="Picture of Lili" alt="A picture of Lili" class="mr-3 mt-7"
                         style="width:250px;" />
                 </div>
                 <div class="col-sm-6">
                     <h1>Lili Begum</h1>
-                    <p>George, help me, please. That was the day I invented time travel. I remember it vividly. I was
-                        standing on the edge of my toilet hanging a clock, the porces was wet, I slipped, hit my head on
-                        the edge of the sink. And when I came to I had a revelation, a picture, a picture in my head, a
-                        picture of this. This is what makes time travel possible. The flux capacitor. Lorraine. I had a
-                        horrible nightmare, dreamed I went back in time, it was terrible. George, there's nothing to be
-                        scared of. All it takes is a little self confidence. You know, if you put your mind to it, you
-                        could accomplish anything.
-                    </p>
-                    <br />
+                    <p> Currently working in a split role across Tax and Technology as a Product Manager delivering world class products in a fast-growing environment whilst also learning web development. </p>
+                    <p>>Passionate about building value for my clients, confidently working with multidisciplinary teams to find the best path to creating meaningful value for them while meeting business objectives and always looking for ways to improve product performance, especially using strong data and analytical skills to inform decisions. Comfortable working in collaborative, technical environments and jump on the opportunity to learn more and share knowledge and experience with others.</p>
                 </div>
             </div>
         </div>
@@ -260,7 +253,8 @@
             </div>
 
             <div class="col-12 col-md-4 border"> Download my
-                <a href="https://www.youtube.com/watch?v=I3E9U3GDrmI&ab_channel=LarryMcDonough" target="_blank">CV</a>
+                <a href="./images/Lili 2022 Long CV.pdf" target="_blank">CV</a> 
+                <!-- This is an old CV used for example purposes - I will replace this once it has been reviewed -->
             </div>
         </div>
     </footer>
