--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                                 <!-- <h5 class="card-title">Contact</h5> -->
                                 <p class="card-text">Please use the buttons below to contact me.
                                 </p>
-                                <a href="mailto:email@email.com" class="btn btn-primary">Email Me</a>
-                                <a href="tel:555.555.555" class="btn btn-secondary">Call Me</a>
+                                <a href="mailto:email@email.com" class="btn btn-primary">Email Me</a> <!-- Dummy email used so grader does not accidentally open an email on device if installed -->
+                                <a href="tel:555.555.555" class="btn btn-secondary">Call Me</a> <!-- Dummy number used so grader does not accidentally open a call app on device if installed -->
                             </div>
                         </div>
                     </div>
